# tinted-builder-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  base24.py  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: auto-assign-issues.yml
base24_builder/: __init__.py  __main__.py  builder.py  cli.py  injector.py  shared.py  updater.py  utils.py
documentation/reference/: MODULES.md  README.md
documentation/reference/base24_builder/: builder.md  cli.md  index.md  injector.md  module.md  shared.md  updater.md
output/alacritty/colors/: base16-atlas-256.yml  base16-atlas.yml  base16-brushtrees-256.yml  base16-brushtrees-dark-256.yml  base16-brushtrees-dark.yml  base16-brushtrees.yml  base16-classic-dark-256.yml  base16-classic-dark.yml  base16-classic-light-256.yml  base16-classic-light.yml  base16-cupcake-256.yml  base16-cupcake.yml  base16-framer-256.yml  base16-framer.yml  base16-hardcore-256.yml  base16-hardcore.yml  base16-heetch-256.yml  base16-heetch.yml  base16-horizon-dark-256.yml  base16-horizon-dark.yml  base16-horizon-light-256.yml  base16-horizon-light.yml  base16-horizon-terminal-dark-256.yml  base16-horizon-terminal-dark.yml  base16-horizon-terminal-light-256.yml  base16-horizon-terminal-light.yml  base16-materia-256.yml  base16-materia.yml  base16-material-256.yml  base16-material-darker-256.yml  base16-material-darker.yml  base16-material-lighter-256.yml  base16-material-lighter.yml  base16-material-palenight-256.yml  base16-material-palenight.yml  base16-material.yml  base16-mellow-purple-256.yml  base16-mellow-purple.yml  base16-mocha-256.yml  base16-mocha.yml  (+18 more)
output/binary-ninja/colors/: base16-decaf.theme  base16-edge-dark.theme  base16-edge-light.theme  base16-espresso.theme  base16-framer.theme  base16-gigavolt.theme  base16-hardcore.theme  base16-helios.theme  base16-horizon-dark.theme  base16-horizon-light.theme  base16-horizon-terminal-dark.theme  base16-horizon-terminal-light.theme  base16-nova.theme  base16-one-dark.theme  base16-sandcastle.theme  base16-synth-midnight-dark.theme  base16-tomorrow-night-eighties.theme
output/blink/colors/: base16-atelier-cave-light.js  base16-atelier-cave.js  base16-atelier-dune-light.js  base16-atelier-dune.js  base16-atelier-estuary-light.js  base16-atelier-estuary.js  base16-atelier-forest-light.js  base16-atelier-forest.js  base16-atelier-heath-light.js  base16-atelier-heath.js  base16-atelier-lakeside-light.js  base16-atelier-lakeside.js  base16-atelier-plateau-light.js  base16-atelier-plateau.js  base16-atelier-savanna-light.js  base16-atelier-savanna.js  base16-atelier-seaside-light.js  base16-atelier-seaside.js  (+89 more)
(+3469 files in other folders)
