[tool.poetry]
name = "base24builder"
version = "2020.2"
description = "A base 24 builder written in Python"
authors = ["Base24"]
keywords = ["base24"]
classifiers = ["Intended Audience :: End Users/Desktop", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3.5","Programming Language :: Python :: 3.6", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8", "Operating System :: OS Independent"]
homepage = "https://github.com/Base24/base24-builder-python"
repository = "https://github.com/Base24/base24-builder-python"
documentation = "https://github.com/Base24/base24-builder-python/blob/master/README.md"
readme = "README.md"
packages = [
    { include = "base24_builder" },
    { include = "base24.py" },
]

[tool.poetry.dependencies]
python = "^3.5"
aiofiles = "^0.5.0"
pystache = "^0.5.4"
pyyaml = "^5.3.1"
metprint = "^2020.4"

[tool.dephell.main]
from = "pyproject.toml"
to = "requirements.txt"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
