[tool.poetry]
name = "base24builder"
version = "2022"
description = "A base 24 builder written in Python"
authors = ["Base24"]
keywords = ["base24"]
classifiers = [
	"Intended Audience :: End Users/Desktop",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3.5",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Operating System :: OS Independent"
]
homepage = "https://github.com/Base24/base24-builder-python"
repository = "https://github.com/Base24/base24-builder-python"
documentation = "https://github.com/Base24/base24-builder-python/blob/master/README.md"
readme = "README.md"
packages = [{ include = "base24_builder" }, { include = "base24.py" }]

[tool.poetry.scripts]
base24 = 'base24_builder.cli:run'

[tool.poetry.dependencies]
python = "^3.6"
aiofiles = "<2,>=0.8.0"
PyYAML = "<7,>=6.0"
pystache = "<2,>=0.6.0"

[tool.black]
line-length = 100
target-version = ["py37"]

[tool.isort]
profile = "black"
indent = "Tab"

[tool.pydocstyle]
convention = "google"
ignore = "D205,D415"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.basic]


[tool.pylint.format]
indent-string = "\t"

[tool.pylint.master]
ignore-patterns = "test_.*?py"

[tool.pylint.messages_control]
enable = ["F", "E", "W", "R", "C"]
disable = [
	"pointless-string-statement",
	"superfluous-parens",
	"bad-continuation"
]
